apps/argocd/alb.yml
apiVersion: v1
kind: Service
metadata:
  name: argocd-alb
  namespace: argocd
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: argocd-server
  ports:
  - port: 8080 # pod/deployment
    targetPort: 8080 # load balancer
